--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,5 @@
-﻿- Icon for bestiary filter 
-- 2-3 more frog varieties
-- Poison arrows???
-- Wooden darts?? -> Poison darts??
+﻿- Add gores for frogs
+- Add ambients for frogs and birds
 - Workshop images 
 - Lawn flamingo recipe + white, gold. Remove from travelling merchant.
 - Mollusk whistle replace with ingredient for new mollusk whistle recipe
@@ -9,4 +7,3 @@
 - Tree shake spawn mod birds 
 - Add corrupt/crimson birds
 - Add golden penguin 
-- IL edit Modify
